# fit

./: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json  turbo.json
.changeset/: config.json
.github/workflows/: ci.yml  deploy.yml
apps/app/: index.html  package.json  vite.config.ts
apps/app/src/: App.spec.ts  App.vue
apps/backend/: .env.example  .gitignore  eslint.config.js  nodemon.json  package.json  prettier.config.js  tsconfig.json  vitest.config.ts
apps/backend/src/: app.ts  index.ts
apps/backend/src/helpers/: paginate.ts
apps/backend/src/interface/: index.ts
apps/backend/src/modules/activity/: constants.ts  helpers.spec.ts  helpers.ts  mocks.ts  model.ts  repository.ts  routes.spec.ts  routes.ts  schema.ts  service.spec.ts  service.ts
apps/backend/src/modules/auth/: constants.ts  helpers.spec.ts  helpers.ts  mocks.ts  repository.ts  routes.spec.ts  routes.ts  schema.ts  service.spec.ts  service.ts
apps/backend/src/modules/common/: addSchemas.ts  constants.ts  createRoutes.ts  errorHandler.ts  helpers.spec.ts  helpers.ts  mocks.ts  registerPlugins.ts  registerPluginsAndRoutes.ts  routes.spec.ts  routes.ts  schema.ts  service.spec.ts  service.ts  types.ts
apps/backend/src/modules/equipment/: mocks.ts  model.ts  repository.ts  routes.spec.ts  routes.ts  schema.ts  service.spec.ts  service.ts
apps/backend/src/modules/exercise/: constants.ts  helpers.spec.ts  helpers.ts  mocks.ts  model.ts  repository.ts  routes.spec.ts  routes.ts  schema.ts  service.spec.ts  service.ts
apps/backend/src/modules/muscle/: mocks.ts  model.ts  repository.ts  routes.spec.ts  routes.ts  schema.ts  service.spec.ts  service.ts
apps/backend/src/modules/user/: constants.ts  helpers.spec.ts  helpers.ts  mocks.ts  model.ts  (+6 more)
apps/backend/src/routes/: activity.ts  exercise.ts  user.ts
apps/backend/src/services/: activity.ts  auth.ts  exercise.ts  user.ts
apps/frontend/: .env.example  .gitignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
apps/frontend/src/: App.spec.ts  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+460 files in other folders)
