[package]
name = "FiT"
version = "0.5.2"
description = "FiT - календарь домашних силовых тренировок"
authors = ["dergunovs@mail.ru"]
license = "MIT"
repository = "https://github.com/dergunovs/fit"
edition = "2024"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2.7.1"
