[package]
name = "FiT"
version = "0.5.10"
description = "FiT - календарь домашних силовых тренировок"
authors = ["dergunovs@mail.ru"]
license = "MIT"
repository = "https://github.com/dergunovs/fit"
edition = "2024"
rust-version = "1.91.0"

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.7.1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
